[gd_scene load_steps=6 format=3 uid="uid://f5h5x2js68fl"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_swry7"]
[ext_resource type="Texture2D" uid="uid://d04bqc5v3befo" path="res://addons/controller_icons/assets/key/arrow_up.png" id="2_r66x7"]
[ext_resource type="Texture2D" uid="uid://bp58drjdgvxsi" path="res://addons/controller_icons/assets/key/enter_alt.png" id="2_wcu48"]
[ext_resource type="Script" path="res://addons/controller_icons/objects/TextureRect.gd" id="3_xi3po"]
[ext_resource type="Texture2D" uid="uid://cge2w6yy0r2cx" path="res://addons/controller_icons/assets/key/arrow_down.png" id="4_8krp2"]

[node name="PauseMenu" type="ColorRect"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)
script = ExtResource("1_swry7")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
focus_neighbor_top = NodePath("../MainMenuButton")
mouse_default_cursor_shape = 2
text = "resume
"

[node name="RetryButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "retry"

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
focus_neighbor_bottom = NodePath("../ResumeButton")
mouse_default_cursor_shape = 2
text = "main menu"

[node name="Up" type="TextureRect" parent="."]
custom_minimum_size = Vector2(24, 24)
layout_mode = 0
offset_left = 88.0
offset_top = 152.0
offset_right = 112.0
offset_bottom = 176.0
texture = ExtResource("2_r66x7")
expand_mode = 1
script = ExtResource("3_xi3po")
path = "ui_up"
max_width = 24

[node name="Text" type="Label" parent="Up"]
layout_mode = 0
offset_left = 28.0
offset_top = 8.0
offset_right = 97.0
offset_bottom = 32.0
scale = Vector2(0.5, 0.5)
text = "Up"
vertical_alignment = 1

[node name="Down" type="TextureRect" parent="."]
custom_minimum_size = Vector2(24, 24)
layout_mode = 0
offset_left = 168.0
offset_top = 152.0
offset_right = 192.0
offset_bottom = 176.0
texture = ExtResource("4_8krp2")
expand_mode = 1
script = ExtResource("3_xi3po")
path = "ui_down"
max_width = 24

[node name="Text" type="Label" parent="Down"]
layout_mode = 0
offset_left = 28.0
offset_top = 8.0
offset_right = 97.0
offset_bottom = 32.0
scale = Vector2(0.5, 0.5)
text = "Down"
vertical_alignment = 1

[node name="Select" type="TextureRect" parent="."]
custom_minimum_size = Vector2(24, 24)
layout_mode = 0
offset_left = 248.0
offset_top = 152.0
offset_right = 272.0
offset_bottom = 176.0
focus_neighbor_top = NodePath("../CenterContainer/VBoxContainer/MainMenuButton")
focus_neighbor_bottom = NodePath("../CenterContainer/VBoxContainer/ResumeButton")
focus_mode = 2
texture = ExtResource("2_wcu48")
expand_mode = 1
script = ExtResource("3_xi3po")
path = "ui_accept"
max_width = 24

[node name="Label" type="Label" parent="Select"]
layout_mode = 0
offset_left = 28.0
offset_top = 8.0
offset_right = 97.0
offset_bottom = 32.0
scale = Vector2(0.5, 0.5)
text = "Select"
vertical_alignment = 1

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
